tests/wpt/tests/third_party/test262/test/language/statements/try/S12.14_A16_T14.js
// Copyright 2009 the Sputnik authors.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
info: |
    TryStatement: "try Block Catch" or "try Block Finally" or "try Block
    Catch Finally"
es5id: 12.14_A16_T14
description: Checking if passing argument to "try" statement fails
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

// CHECK#1
try(e1){
}
catch(e){}
